--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 27.09.2022 15:31:46</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.09.2022 08:03:29</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 27. 09. 2022</h5>
+<h5>Středa, 28. 09. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>V období 28.-30.9. bude jídelna ZAVŘENA</strong>
@@ -57,51 +57,10 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 27.9.2022</div>
+<div class="nadpis">Středa 28.9.2022</div>
 <ul>
 <li class="poznamka">
-<div class="polozka">Kokosová panna cotta  (bez lepku, bez laktózy) </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ořechový košíček s čokoládou  </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kulajda v menu <em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Kulajda samostatně <em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">Brownie </div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Svíčková na smetaně, variace knedlíků, brusinky, citron <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">169 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kuřecí satay, arašídová omáčka, jasmínová rýže, karotka, koriandr, sezam <em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">165 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Burrito wrap s fazolemi a cheddar sýrem, zeleninový salát, zakysaná smetana <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">165 Kč</div>
+<div class="polozka">Dnes máme zavřeno. Těšíme se na vás opět ve čtvrtek 29. 9. </div>
 <div class="clear"></div>
 </li>
 </ul>
@@ -115,13 +74,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramboračka s houbami</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Žampionový krém se zakysanou smetanou</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí kýta na slanině, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Restovaná kuřecí játra s fazolovými lusky a klobásou, bramborové hranolky</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta:150g Steak z kuřecích prsou, batátovo-karotkové pyré s máslem, grilované rajče, parmazán</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočka na kyselo  s uzeným masem a vařeným vejcem, kyselá okurka, škvarky s cibulkou</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Zbojnická vepřová roláda plněná anglickou slaninou a česnekem, mačkané brambory s cibulí</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná kuřecími stripsy, mexickým dresinkem, kukuřicí, sýrem, ledovým salátem a zeleninou, bramborové hranolky, zakysaná smetana</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">bezlep kový</td><td class="menuName">Pečený čokoládový dort (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový)</td><td class="menuPrice">69,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Smažené řízky z kuřecích prsou a vepřové kotlety bez kosti, vařené brambory s máslem, citron</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Paprikový lusk s mletým masem, rajská omáčka, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na roštu s červenou cibulí a feferonkou, hranolky, mexický dip</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">Lowcarb</td><td class="menuName">Nízkosacharidová dieta: 200g Sekaný masový biftek, grilovaná karotka, lilek, cuketa, vaječná roláda se šunkou a sýrem</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">170g</td><td class="menuName">Závitek z kuřecích prsou plněný brokolicí, šunkou a sýrem, mačkané brambory s cibulí, kukuřice na másle</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné smetanové omáčce se žampiony, špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová panenka do růžova na zeleninovém salátu, promíchaný hořčičným dresinkem, vařené vejce</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený čokoládový dort s mákem (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový) </td><td class="menuPrice">69,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">BOHEMIAN LAGER 11° alk. 4,4% - Pivovar Libertas</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">BOHEMIAN LAGER 11° alk. 4,4% - Pivovar Libertas</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -129,9 +88,10 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<div class="row denni-menu" style="max-width:570px; margin:auto; margin-top:70px;"><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div></div>
+<div class="row denni-menu" style="max-width:570px; margin:auto; margin-top:70px;"><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+  position: relative;
+  top: -100px; 
+  visibility: hidden;"></a><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></div></div>
 </td>
 </tr>
 </table>
