--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.10.2022 07:38:05</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.10.2022 08:26:23</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -59,7 +59,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pondělí 3.10.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Medovník</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mango chia puding  (baz lepku, bez laktózy) </div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ořechová bábovka</div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krémová dýňová polévka s restovanými semínky <em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Krémová dýňová polévka s restovanými semínky  <em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí prso zapečené s mozzarellou a rajčaty, bazalková omáčka, bulgur, čerstvé bylinky <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Hovězí ragú, restované houby, nakládaná cibule, rýže, smetana <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>250g Dhál z červené čočky, kořenová zelenina, rajčata, estragon, jasmínová rýže, černý sezam <em title="Celer">9</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
